<resources>
    <string name="app_name">STAR_WARS_project</string>

    <string name="enter_title">Enter title</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_name">Enter name</string>
    <string name="search_button">Search</string>
    <string name="enter_birth_year">Enter birth year</string>
    <string name="enter_class">Enter class</string>
    <string name="enter_length">Enter length</string>
    <string name="enter_classification">Enter classification</string>
    <string name="enter_homeworld">Enter homeworld</string>
    <string name="enter_diameter">Enter diameter</string>
    <string name="enter_gravity">Enter gravity</string>
    <string name="enter_population">Enter population</string>

    <string name="retryDialog_title">Internet Connection Required</string>
    <string name="retryDialog_text">Please check your Internet connection</string>
    <string name="retryDialog_connection_btn">Retry Connection</string>
    <string name="exitdialog_title">Activity Exit Alert</string>
    <string name="exitdialog_text">Are you sure want to exit?</string>
    <string name="yes_btn">YES</string>
    <string name="no_btn">NO</string>
    <string name="more_button">More</string>
    <string name="delete_button">Delete</string>
    <string name="birth_year">Birth year</string>
    <string name="director">Director</string>
    <string name="population">Population</string>
    <string name="classification">Classification</string>
    <string name="model">Model</string>
    <string name="back_button">BACK</string>

    <string name="people_button">PEOPLE</string>
    <string name="films_button">FILMS</string>
    <string name="species_button">SPECIES</string>
    <string name="vehicles_button">VEHICLES</string>
    <string name="starships_button">STARSHIPS</string>
    <string name="planets_button">PLANETS</string>

    <string name="cancel_btn">Cancel</string>
    <string name="toast_noConnection">Brak polaczenia z internetem</string>
    <string name="youtube"> YouTube Videos </string>
    <string name="meme">Mem Gallery</string>
</resources>
