<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/search_bg"
        android:layout_height="match_parent">

    <Spinner
            android:background="@drawable/spinner_round"

            android:id="@+id/spinner"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_height="44dp" android:layout_width="123dp"/>
    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edit_round"
            android:layout_marginStart="28dp"
            android:hint="@string/enter_name"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/title"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_round"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:hint="@string/enter_title"
            android:visibility="invisible"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/model"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_round"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_model"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/object_class"
            android:background="@drawable/edit_round"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@+id/model"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_class"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/length"
            android:background="@drawable/edit_round"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/object_class"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_length"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/classification"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_round"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_classification"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/homeworld"
            android:background="@drawable/edit_round"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/classification"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_homeworld"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{SearchingFragment.search}"
            android:visibility="visible"

            android:textColor="@color/milk_white"
            android:text="@string/search_button"
    />
    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/birth_year"
            android:background="@drawable/edit_round"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"

            android:hint="@string/enter_birth_year"/>
    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:id="@+id/diameter"

            android:layout_marginTop="8dp"
            android:background="@drawable/edit_round"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_diameter"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"

            android:id="@+id/gravity"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_round"
            app:layout_constraintTop_toBottomOf="@+id/diameter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_gravity"/>

    <EditText
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_round"
            android:id="@+id/population"
            app:layout_constraintTop_toBottomOf="@+id/gravity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="28dp"
            android:visibility="invisible"
            android:hint="@string/enter_population"/>
    <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_round"
            android:textSize="18dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/birth_year"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>