<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <TextView
            android:id="@+id/dialog_title_text"
            android:text="@string/retryDialog_title"
            android:textSize="@dimen/dialog_title"
            android:textColor="@color/basic_text"
            android:layout_marginLeft="@dimen/basic_margin"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginRight="@dimen/basic_margin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/dialog_text"
            android:text="@string/retryDialog_text"
            android:textSize="@dimen/dialog_message"
            android:layout_marginLeft="@dimen/basic_margin"
            android:layout_marginRight="@dimen/basic_margin"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_title_text"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/retry_connection_text"
            android:text="@string/retryDialog_connection_btn"
            android:layout_width="wrap_content"
            style="@style/button_dialog"
            android:layout_margin="@dimen/basic_margin"
            android:layout_below="@+id/dialog_text"
            android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/go_back_btn"
            android:text="@string/cancel_btn"
            android:layout_width="wrap_content"
            style="@style/button_dialog"
            android:layout_margin="@dimen/basic_margin"
            android:layout_below="@+id/dialog_text"
            android:layout_alignParentStart="true"/>
</RelativeLayout>